--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.2",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "typed.js": "^2.0.12"
   }
 }
